# nucleus

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE.md  README.md
assets/: ariane6.glb  peach_castle.glb  pkg.json  pkg2.json  player.json  temple_of_time.glb
assets/glsl/: blit.frag  canvas_blit.frag  canvas_blit.vert  flat.frag  flat.vert  lit.frag  lit.vert  screen_blit.frag  screen_blit.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert  unlit.frag  unlit.vert  wireframe.frag  wireframe.vert
assets/skyboxes/: skybox.json  test.json
docs/: TODO.md  nsl.md  objects.md  renderer.md
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  main.c
examples/core/: CMakeLists.txt  main.c
examples/cxx/: CMakeLists.txt  main.cpp
examples/ecs/: CMakeLists.txt  main.c
examples/graphics/: CMakeLists.txt  main.c
examples/physics/: CMakeLists.txt  config.ini  main.c
examples/platform/: CMakeLists.txt  main.c
examples/resource/: CMakeLists.txt  main.c
examples/rgfw/: CMakeLists.txt  main.c
examples/stack/: CMakeLists.txt  main.c
nucleus/: allocator.h  asset.h  config.h  context.h  core.h  error.h  geometry.h  gl.h  graphics.h  image.h  input.h  instance.h  internal.h  logger.h  loop.h  math.h  memory.h  nucleus.h  platform.h  renderer.h  surface.h  time.h  types.h  utils.h
nucleus/asset/: api.h  asset.h  asset_impl.h  internal.h  manager.h  manager_impl.h  model.h  model_impl.h  texture.h  texture_impl.h
nucleus/backend/: gl.h  gl_shader.h  glfw.h
nucleus/core/: api.h  app.h  app_impl.h  color.h  color_impl.h  config.h  context.h  context_impl.h  core.h  core_impl.h  ds.h  ds_impl.h  fixedloop.h  fixedloop_impl.h  geometry.h  geometry_impl.h  image.h  image_impl.h  internal.h  logger.h  logger_impl.h  macro.h  math.h  math_impl.h  memory.h  memory_impl.h  object.h  object_impl.h  scope.h  scope_impl.h  string.h  string_impl.h  table.h  table_impl.h  time.h  time_impl.h
nucleus/ecs/: api.h  ecs.h  ecs_dump_impl.h  ecs_impl.h  ecs_seria_impl.h  seria_impl.h
nucleus/gl/: buffer.h  buffer_impl.h  camera.h  camera_impl.h  canvas_impl.h  flat_impl.h  forward_impl.h  gl.h  gl_impl.h  handle.h  internal.h  light.h  light_impl.h  lit_impl.h  material.h  material_impl.h  mesh.h  mesh_impl.h  renderer.h  renderer_impl.h  renderpass.h  renderpass_impl.h  shader_data.h  shadow_impl.h  skybox_impl.h  texture.h  texture_impl.h  unlit_impl.h  wireframe_impl.h
nucleus/graphics/: api.h  backend.h  backend_impl.h  camera.h  camera_impl.h  cubemap.h  font.h  font_data.h  font_impl.h  geometry.h  geometry_impl.h  gl.h  gl_impl.h  gl_shader.h  gl_shaders.h  graphics.h  graphics_impl.h  image.h  image_impl.h  immediate.h  immediate_impl.h  internal.h  light.h  light_impl.h  material.h  material_impl.h  mesh.h  mesh_impl.h  model.h  model_impl.h  renderer.h  renderer_impl.h  renderpass.h  renderpass_impl.h  shared_types.h  texture.h  texture_impl.h
nucleus/graphics/gl/: canvas_impl.h  forward_impl.h  gl.h  gl_impl.h  mesh_impl.h  renderpass_impl.h  shader_data.h  shadow_impl.h  texture_impl.h
nucleus/importer/: api.h  cubemap_impl.h  image_impl.h  importer.h  importer_impl.h  internal.h  json.h  json_impl.h  model_impl.h  package_impl.h  texture_impl.h
nucleus/math/: api.h  math_impl.h
nucleus/physics/: api.h  physics.h  physics_impl.h
nucleus/platform/: api.h  context.h  context_impl.h  glfw_impl.h  input.h  input_impl.h  internal.h  platform.h  platform_impl.h  surface.h  surface_impl.h
nucleus/resource/: api.h  resource.h  resource_impl.h
nucleus/seria/: api.h  dumper_impl.h  json.h  json_impl.h  nbin.h  nbin_impl.h  reflect.h  reflect_impl.h  seria.h  seria_impl.h
nucleus/surface/: glfw.h
nucleus/ui/: api.h  ui.h  ui_impl.h
nucleus/utils/: api.h  controller.h  controller_impl.h  font.h  font_impl.h  geometry.h  geometry_impl.h  image.h  image_impl.h  internal.h  loader.h  loader_impl.h  model.h  model_impl.h  stats.h  stats_impl.h  ui.h  ui_impl.h  utils.h  utils_impl.h
tests/: CMakeLists.txt  vec.c
tools/: convert_font.py  format_all.sh  generate_header_only.py  generate_shader_header.sh  patch_compile_commands.sh  replace_all.sh
